import "base.proto";
import "facttypes_base.proto";

message Address: NFactType.TFact
{
   required string StreetName = 1;
   optional string Descr = 2;
   required string HouseNumber = 3;
}

message Time: NFactType.TFact
{
   required string HoursWork = 1;
}

message Museum: NFactType.TFact
{
   required string MuseumName = 1;
}

message Park: NFactType.TFact
{
   required string ParkName = 1;
}

message Monument: NFactType.TFact
{
   required string MonumentName = 1;
}

message Homestead: NFactType.TFact
{
   required string HomesteadName = 1;
}